# demo-design-lifecycle

./: README.md  compose.yml  invoke.example.yml  pyproject.toml  tasks.py
development/: Dockerfile  docker-compose.postgres.yml
jobs/: __init__.py
jobs/vlan_svi_design/: __init__.py
jobs/vlan_svi_design/context/: __init__.py  context.yaml
jobs/vlan_svi_design/designs/: 0001_vlans.yaml.j2  0002_prefixes.yaml.j2  0003_svi.yaml.j2
jobs/vlan_svi_design/tests/checks/: 0001_vlans.yaml.j2
